[package]
name = "nperf"
version = "0.1.0"
authors = ["Jan Bujak <jan.bujak@nokia.com>"]

[dependencies]
sc = "0.2"
libc = "0.2"
byteorder = "1"
regex = "0.2"
lazy_static = "1"
clap = "2"
log = "0.4"
env_logger = "0.5"
parking_lot = "0.5"
num_cpus = "1"
chrono = "0.4"
speedy = "0.4"
speedy-derive = "0.3"
serde = "1"
serde_json = "1"
serde_derive = "1"

proc-maps = { version = "0.1", path = "proc-maps" }

[dependencies.nwind]
version = "0.1"
path = "nwind"
features = ["logging", "addr2line"]
default-features = false

[dev-dependencies]
quickcheck = "0.6"
criterion = "0.2"

[profile.release]
lto = true
panic = "abort"

[features]
default = []

[workspace]
members = [".", "nwind", "proc-maps"]

[[bench]]
name = "unwinding"
harness = false
