[package]
name = "nperf"
version = "0.1.0"
authors = ["Jan Bujak <jan.bujak@nokia.com>"]

[dependencies]
libc = "0.2"
regex = "1"
lazy_static = "1"
log = "0.4"
env_logger = "0.6"
parking_lot = "0.7"
num_cpus = "1"
chrono = "0.4"
speedy = "0.4"
speedy-derive = "0.3"
serde = "1"
serde_json = "1"
serde_derive = "1"
structopt = "0.2"
inferno = { version = "0.6", default-features = false, optional = true }

proc-maps = { version = "0.1", path = "proc-maps" }
perf_event_open = { version = "0.1", path = "perf_event_open" }

[dependencies.nwind]
version = "0.1"
path = "nwind"
features = ["log"]
default-features = false

[dev-dependencies]
quickcheck = "0.8"
criterion = "0.2"

[profile.release]
lto = true
panic = "abort"

[features]
default = ["addr2line", "inferno"]
addr2line = ["nwind/addr2line"]
debug-logs = ["nwind/debug-logs"]

[workspace]
members = [".", "nwind", "proc-maps", "perf_event_open"]

[[bench]]
name = "unwinding"
harness = false
