[package]
name = "nperf"
version = "0.1.0"
authors = ["Jan Bujak <jan.bujak@nokia.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
regex = "1"
lazy_static = "1"
log = "0.4"
env_logger = { version = "0.7", optional = true }
parking_lot = "0.9"
num_cpus = "1"
chrono = "0.4"
speedy = "0.4"
speedy-derive = "0.3"
string-interner = "0.7"
serde = "1"
serde_json = "1"
serde_derive = "1"
structopt = "0.2"
inferno = { version = "0.9", default-features = false, optional = true }

proc-maps = { version = "0.1", path = "proc-maps" }
perf_event_open = { version = "0.1", path = "perf_event_open" }

[dependencies.nwind]
version = "0.1"
path = "nwind"
features = ["log", "rustc-demangle"]
default-features = false

[dev-dependencies]
quickcheck = { version = "0.9", default-features = false, features = ["log"] }
criterion = "0.3"

[profile.release]
lto = true
panic = "abort"

[features]
default = ["addr2line", "inferno", "env_logger"]
addr2line = ["nwind/addr2line"]
debug-logs = ["nwind/debug-logs"]

[workspace]
members = [".", "nwind", "proc-maps", "perf_event_open"]

[[bench]]
name = "unwinding"
harness = false
