[package]
name = "nwind"
version = "0.1.0"
authors = ["Jan Bujak <jan.bujak@nokia.com>"]

[dependencies]
byteorder = "1"
gimli = "0.16"
goblin = "0.0.19"
scroll = "0.9"
memmap = "0.7"
log = { version = "0.4", optional = true }
speedy = "0.4"
speedy-derive = "0.3"
lru = "0.1"
string-interner = "0.7"
cpp_demangle = "0.2"
addr2line = { version = "0.7", optional = true, default-features = false, features = ["cpp_demangle"], git = "https://github.com/gimli-rs/addr2line.git", rev = "b1ac5ae4325bdcd16501d71d0e69207ce9ecb004" }
proc-maps = { version = "0.1", path = "../proc-maps" }
libc = "0.2"

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
env_logger = "0.6"

[features]
default = ["logging", "addr2line"]
local-unwinding = ["cc"]
logging = ["log"]
