[package]
name = "nwind"
version = "0.1.0"
authors = ["Jan Bujak <jan.bujak@nokia.com>"]
edition = "2018"

[dependencies]
byteorder = "1"
gimli = { version = "0.17", default-features = false, features = ["std", "read"] }
goblin = "0.0.21"
scroll = "0.9"
memmap = "0.7"
log = { version = "0.4", optional = true }
speedy = "0.4"
speedy-derive = "0.3"
lru = "0.1"
string-interner = "0.7"
cpp_demangle = "0.2"
addr2line = { version = "0.8", optional = true, default-features = false, features = ["std", "cpp_demangle"], git = "https://github.com/gimli-rs/addr2line.git", rev = "1535f8f5e11b0b78512ce3c42316a1a0936eed3d" }
proc-maps = { version = "0.1", path = "../proc-maps" }
libc = "0.2"

[build-dependencies]
cc = { version = "1", optional = true }

[dev-dependencies]
env_logger = "0.6"

[features]
default = ["log", "addr2line"]
local-unwinding = ["cc"]
debug-logs = ["log"]
