[package]
name = "nwind"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
edition = "2018"

[dependencies]
byteorder = "1"
gimli = { version = "0.23", default-features = false, features = ["std", "read", "endian-reader"] }
goblin = "0.0.24"
scroll = "0.9"
memmap = "0.7"
log = { version = "0.4", optional = true }
speedy = "0.7"
lru = "0.6"
cpp_demangle = "0.2"
rustc-demangle = { version = "0.1", optional = true }
addr2line = { version = "0.14", optional = true, default-features = false, features = ["std"] }
proc-maps = { version = "0.1", path = "../proc-maps" }
libc = "0.2"

[build-dependencies]
cc = { version = "1", optional = true }
rustc_version = "0.2"

[dev-dependencies]
env_logger = "0.7"

[features]
default = ["log", "addr2line", "rustc-demangle"]
local-unwinding = ["cc"]
debug-logs = ["log"]
